--- a/app/views/products/_cardproduct.html.erb
+++ b/app/views/products/_cardproduct.html.erb
@@ -66,7 +66,7 @@
                         <br>
                         <% if current_user && current_user.admin %>
                           <%= link_to "Modifier", edit_product_path(product.id), class:"btn btn-outline-primary p-2 mx-1 mt-2 btn-dark-raidators btn-md" %>
-                          <%= link_to "Supprimer", product_path(product.id), class:"btn btn-outline-primary p-2 mx-1 mt-2 btn-dark-raidators btn-md", method: :DELETE  %>
+                          <%= link_to "Supprimer", product_path(product.id), class:"btn btn-outline-primary p-2 mx-1 mt-2 btn-warning-raidators btn-md", method: :DELETE  %>
                         <%end%>   
                       </div>
                     </div>
