--- a/app/views/posts/_list_articles.html.erb
+++ b/app/views/posts/_list_articles.html.erb
@@ -1,101 +1,91 @@
 <% content_for :title, "Articles | Raidators" %>
   
 <% if current_user && current_user.admin %>
-  <!--Section: Content-->
-  <section>
-    <!-- Section heading -->
-    <h2 class="text-center  mb-4 pb-2">Articles</h2>
-    <!-- Section description -->
-    <p class="text-center mx-auto w-responsive mb-5">Retrouve ici l'ensemble des articles de notre blog. Ces articles peuvent aborder à la fois l'avancement de notre projet, des conseils, des recettes secrètes pour faire votre meilleur gâteau au chocolat.
-      Bonne lecture &#128214;
-    </p>
-    <%= link_to "Nouvel article", new_post_path, class:"btn btn-success btn-raidators"%>
   <section class="light-background-raidators">
     <div class="container-fluid mt-3 mb-5 light-background-raidators ">
-      <div class="container  mt-5">
+      <div class="container mt-5">
         <!-- Section heading -->
-        <h2 class="text-center  mb-4 pb-2">Articles</h2>
+        <h2 class="text-center mb-4 pb-2">Articles</h2>
         <!-- Section description -->
         <p class="text-center mx-auto w-responsive mb-5">Les Raidators : "Retrouve ici l'ensemble des articles de notre blog. Ces articles peuvent aborder à la fois l'avancement de notre projet, des conseils, des recettes secrètes pour faire votre meilleur gâteau au chocolat.
           Bonne lecture &#128214;"
         </p>
         <%= link_to "Nouvel article", new_post_path, class:"btn btn-success btn-raidators"%>
-        <div>
-          <!-- Grid row -->
-          <% @posts.each do |post| %>
-            <div class="row align-items-center">
-              <!-- Grid column -->
-              <div class="col-lg-5 col-xl-4">
-                <!-- Featured image -->
-                <hr class="mb-5">
-                <div class="card-img-top "> 
-                  <% if post.avatar.attached? %>
-                    <%= image_tag post.avatar, class:"avatar-articles" %> 
-                  <%end%>    
-                </div>   
-              </div>
-              <!-- Grid column -->
-              <div class="col-lg-7 col-xl-8">
-                <!-- Post title -->
-                <p class=" mb-3"><strong><%= post.title %></strong></p>
-                <!-- Read more button -->
-                  <%= link_to "Modifier l'article", edit_post_path(post.id), class:"btn bg-info text-white btn-raidators"%>
-                  <%= link_to "Voir l'article", post_path(post.id), class:"btn btn-success btn-raidators"%>
-              </div>
-              <!-- Grid column -->
+      </div>
+      <div class="container mt-5">
+        <!-- Grid row -->
+        <% @posts.each do |post| %>
+          <div class="row align-items-center">
+            <!-- Grid column -->
+            <div class="col-lg-5 col-xl-4">
+              <!-- Featured image -->
+              <hr class="mb-5">
+              <div class="card-img-top "> 
+                <% if post.avatar.attached? %>
+                  <%= image_tag post.avatar, class:"avatar-articles" %> 
+                <%end%>    
+              </div>   
             </div>
-          <%end%>
+            <!-- Grid column -->
+            <div class="col-lg-7 col-xl-8">
+              <!-- Post title -->
+              <p class=" mb-3"><strong><%= post.title %></strong></p>
+              <!-- Read more button -->
+              <%= link_to "Modifier l'article", edit_post_path(post.id), class:"btn text-white btn-dark-raidators"%>
+              <%= link_to "Voir l'article", post_path(post.id), class:"btn btn-primary btn-light-raidators"%>
+              <%= link_to "Supprimer", post_path(post.id), class:"btn btn-primary p-2 mx-1 mt-2 btn-warning-raidators btn-md", method: :DELETE  %>
+            </div>
+            <!-- Grid column -->
+          </div>
+        <%end%>
         </div>
         <!-- Grid row -->
-
         <hr class="my-5">
       </div>
     </div>
   </section>
 <%else%>
-  <section class="light-background-raidators">
+  <section>
     <div class="container-fluid mt-3 mb-5 light-background-raidators ">
-      <div class="container  mt-5">
-        <!-- Section heading -->
+      <div class="container mt-5">
+        <!-- container heading -->
         <h2 class="text-center  mb-4 pb-2">Articles</h2>
-        <!-- Section description -->
+        <!-- container description -->
         <p class="text-center mx-auto w-responsive mb-5">Les Raidators : "Retrouve ici l'ensemble des articles de notre blog. Ces articles peuvent aborder à la fois l'avancement de notre projet, des conseils, des recettes secrètes pour faire votre meilleur gâteau au chocolat.
           Bonne lecture &#128214;"
         </p>
-        <div>
-          <!-- Grid row -->
-          <% @posts.each do |post| %>
-            <div class="row align-items-center">
-              <!-- Grid column -->
-              <div class="col-lg-5 col-xl-4 ">
-                <!-- Featured image -->
-                <hr class="mb-5">
-                <div class="card-img-top "> 
-                  <% if post.avatar.attached? %>
-                    <%= image_tag post.avatar, class:"avatar-articles" %> 
-                  <%end%>    
-                </div>   
-                </div>
-              </div>
-              <!-- Grid column -->
-              <div class="col-lg-7 col-xl-8">
-                <!-- Post title -->
-                <p class=" mb-3"><strong><%= post.title %></strong></p>
-                <!-- Read more button -->
-                  <%= link_to "Voir l'article", post_path(post.id), class:"btn btn-success btn-raidators"%>
-              </div>
-              <!-- Grid column -->
-            </div>
-          <%end%>
-        </div>
+      <div>
+      <div class="container mt-5">
         <!-- Grid row -->
-        <hr class="my-5">
-      <!--Section: Content-->
+        <% @posts.each do |post| %>
+          <div class="row align-items-center">
+            <!-- Grid column -->
+            <div class="col-lg-5 col-xl-4">
+              <!-- Featured image -->
+              <hr class="mb-5">
+              <div class="card-img-top "> 
+                <% if post.avatar.attached? %>
+                  <%= image_tag post.avatar, class:"avatar-articles" %> 
+                <%end%>    
+              </div>   
+            </div>
+            <!-- Grid column -->
+            <div class="col-lg-7 col-xl-8">
+              <!-- Post title -->
+              <p class=" mb-3"><strong><%= post.title %></strong></p>
+              <!-- Read more button -->
+                <%= link_to "Voir l'article", post_path(post.id), class:"btn btn-success btn-raidators"%>
+            </div>
+            <!-- Grid column -->
+          </div>
+        <%end%>
       </div>
+      <!-- Grid row -->
+      <hr class="my-5">
     </div>
   </section>
 <%end%>
-</div>
+
 
 
 
