change the mailer and resources for checkout

--- a/app/views/order_mailer/new_order_email.html.erb
+++ b/app/views/order_mailer/new_order_email.html.erb
@@ -4,10 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Vous avez une nouvelle commande !</p>
-    <p>
-    Détail de la commande <br>
-    --------------------------
-    </p>
+    <p>Vous avez un nouveau don </p>
+    <p>Rendez profil pour le consulter</p>
+
   </body>
 </html>
