--- a/app/views/order_mailer/order_email.html.erb
+++ b/app/views/order_mailer/order_email.html.erb
@@ -4,10 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1> Salut <%= @user.first_name %> voici ta commande :)</h1>
-    <p>
-    </p>
-    <p> Un  grand merci de la part de toute l'équipe, et à bientot</p>
+    
+    <h1> Merci pour ton don, le dieu des Raidators te le rendra </h1>
+    <p> PS: Si tu as besoin d'une facture, n'hésite pas à nous contacter à raidator@yopmail.com </p>
     </div>
   </body>
 </html>
