--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -9,15 +9,8 @@
       <!-- Section heading -->
       <h2 class="text-left mb-5">Donner accès à l'éducation</h2>
       <p class="text-left mb-5">L'Europ.Raid est le premier Raid-Aventure d’ Europe. Il organise cette action dans les pays de l’Europe de l’Est depuis 2014.
-      Ce raid consiste à traverser l’Europe en Peugeot 205 avec à son bord 70 Kg de matériel scolaire, sportif ou médical. Ces dernières seront ensuite distribuées dans des écoles et orphelinats locaux d’Europe de l’Est pour aider les enfants défavorisés.<br> 
-      <br>
-      Vous trouverez ci-dessous quels équipements nous pouvons collecter et quels sont les points de collecte.<br>
-      <br>
+      Ce raid consiste à traverser l’Europe en Peugeot 205 avec à son bord 70 Kg de matériel scolaire, sportif ou médical. Ces dernières seront ensuite distribuées dans des écoles et orphelinats locaux d’Europe de l’Est pour aider les enfants défavorisés.<br> </p>
       
-      <strong>Angers:</strong><br>
-      <br>
-      - Day by Day, 29 Rue de la Roë<br>
-      - Le Garage, 23 Boulevard du Maréchal Foch </p>
     </section>
     <!--Section: Content-->
   </div>
@@ -40,7 +33,19 @@
           <!-- Excerpt -->
           <p> Vous souhaitez soutenir une action solidaire ? Vous pouvez simplement nous expédier le matériel à l'adresse suivante :
           10 Route de la Noé d'Armengeo 44600 Saint-Nazaire.
-          Vous pouvez aussi nous le remettre en main propre à Saint-Nazaire, Nantes ou Angers ou dans des points de collectes listées ci-dessous.<br></p>
+          Vous pouvez aussi nous le remettre en main propre à Saint-Nazaire, Nantes ou Angers ou dans des points de collectes listées ci-après.<br>
+          
+          <br>
+          Vous trouverez ci-dessous quels équipements nous pouvons collecter et quels sont les points de collecte.<br>
+          <br>
+          
+          <strong>Angers:</strong><br>
+          <br>
+          - Day by Day, 29 Rue de la Roë<br>
+          - Le Garage, 23 Boulevard du Maréchal Foch  <br>
+          - L'épicerie 2 Pauline, 22 Rue Saint-Julien
+          
+          </p>
         </div>
         <!-- Grid column -->
         <div class="col-lg-5 ">
