--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -22,6 +22,7 @@
       <div id="content-wrapper" class="d-flex flex-column">
         <div id="content">
           <%= render 'layouts/admin/topbar' %>
+          <%= render 'layouts/flash' %>
             <div class="container-fluid">
               <%= yield %>
             </div>
