--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -6,6 +6,7 @@
     <h6 class="m-0 font-weight-bold text-primary">PRODUITS</h6>
   </div>
   <div class="card-body">
+    <%= link_to "Créer un nouveau produit", new_admin_product_path, class: "btn btn-info mb-3" %>
     <div class="table-responsive">
       <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
         <thead>
