--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -40,6 +40,7 @@
             </div>
           </div>
         </div>
+        <%= link_to "Annuler", admin_products_path, class: "btn btn-warning mb-3" %>
       </div>
     </div>
   </div>
