CRUD done for posts

--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -6,7 +6,7 @@
     <h6 class="m-0 font-weight-bold text-primary">ARTICLES</h6>
   </div>
   <div class="card-body">
-    <%= link_to "Créer un nouveau produit", new_admin_post_path, class: "btn btn-info mb-3" %>
+    <%= link_to "Créer un nouvel article", new_admin_post_path, class: "btn btn-info mb-3" %>
     <div class="table-responsive">
       <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
         <thead>
