--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,7 +30,7 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <% if current_user.admin %>
+      <% if current_user && current_user.admin %>
         <li class="nav-item bg-white">
           <%= link_to "Dashboard admin", admin_root_path,  class:"nav-link text-dark" %>
         </li>
