--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -72,6 +72,22 @@
     </div>
   </li>
 
+  <li class="nav-item">
+    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePosts"
+    aria-expanded="true" aria-controls="collapsePosts">
+    <i class="fas fa-fw fa-euro-sign"></i>
+    <span>Articles</span>
+    </a>
+    <div id="collapsePosts" class="collapse" aria-labelledby="headingUtilities"
+    data-parent="#accordionSidebar">
+      <div class=" py-2 collapse-inner rounded">
+        <%= link_to "Tous les articles", admin_posts_path, class: "collapse-item text-light" %>
+        <%= link_to "Créer un article", new_admin_post_path, class: "collapse-item text-light" %>
+      </div>
+    </div>
+  </li>
+
+
   <!-- Divider -->
   <hr class="sidebar-divider">
 
