--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -22,7 +22,7 @@
                 <%= f.text_area :description, placeholder: @product.description, class: 'mt-3 form-control form-control-raidators', required: true %>
               </div>
               <div class="form-group">
-                <%= f.select :category,[["donation", "merchandising"], @product.category], {}, class: 'form-control form-control-raidators' %>
+                <%= f.select :category, options_for_select(Product.categories.keys, @product.category), {}, class: 'form-control form-control-raidators' %>
               </div>
                 <div class="form_group mt-3">
                   Part de donation en % (si 10%, mettre 10) :
