--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,59 @@
+<% content_for :title, "Dons | Raidators" %>
 
-<%= render "cardproduct"%>
+<%= render :partial => "shared/banner" %>
+
+<section>
+  <div class="container mt-5">
+    <!--Section: Content-->
+    <section>
+      <!-- Section heading -->
+      <h2 class="text-left mb-5 text-center">Un achat solidaire</h2>
+      <p class="text-left mb-5 text-left">Tout achat de produit nous rapproche de l’objectif : permettre à l’équipe Raidators de participer à Europ.Raid pour acheminer 70Kg de matériels vers des écoles défavorisées. <br> Les produits sont proposés en partenariat avec des producteurs locaux, les goodies sont floqués Raidators. Vous pouvez aussi faire un simple don si vous le souhaitez.  </p>
+    </section>
+    <!--Section: Content-->
+  </div>
+</section>
+
+<div class="d-flex justify-content-center">
+<% if current_user && current_user.admin %>
+  <%= link_to "Gérer les produits", admin_products_path, class:"btn btn-warning mr-3" %>
+  <%= link_to "Ajouter un produit", new_admin_product_path, class:"btn btn-warning" %>
+<% end%>
+</div>
+
+<section class="light-background-raidators">
+  <div class="container mt-5">
+    <!--Section: Content-->
+    <section>
+      <!--Grid row-->
+      <div class="row">
+        <!--Grid column-->
+        <div class="col-lg-12">
+          <h3 class="text-left mb-5">Les produits et dons</h3>
+          <!-- Pills navs -->
+          <ul class="nav md-pills flex-center flex-wrap mx-0" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link text-uppercase" data-toggle="tab" href="#panel31" role="tab">1. Don sans contre partie</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-uppercase" data-toggle="tab" href="#panel32" role="tab">2. Don avec contre partie</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- Pills panels -->
+      <div class="tab-content mb-5 align-items-center">
+        <!--Panel 1-->
+        <div class="tab-pane fade show in active" id="panel31" role="tabpanel">
+          <%= render 'list_products' %>
+        </div>
+
+        <!--Panel 2-->
+        <div class="tab-pane fade" id="panel32" role="tabpanel">
+          <%= render 'list_donations' %>
+        </div>
+
+      </div>
+    </section>
+  </div>
+</section>
