Change price display

--- a/app/views/products/_list_donations.html.erb
+++ b/app/views/products/_list_donations.html.erb
@@ -10,7 +10,7 @@
         <!-- Card content -->
         <div class="card-body">
           <h3> <%= product.title %> </h3>
-          <p class="card-title text-muted font-small mt-3 mb-2"> Prix:<%= product.price %> </p>
+          <p class="card-title text-muted font-small mt-3 mb-2"> Prix:<%= product.price / 100 %> €</p>
           <% if user_signed_in? %>
             <%= link_to "soutenir le projet", selected_products_path(product_id: product.id), method: 'POST', class:"btn btn-success btn-raidators btn-md btn-rounded mx-0" %>
             <%= link_to "Voir le détails", product_path(product.id), class:"btn btn-outline-primary btn-light-raidators btn-md  mx-0" %>
