moove fake sponsors, add button, erase seed. To let administrator add on website

--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -268,53 +268,48 @@
     <p class="lead text-muted mx-auto mt-4 pt-2 mb-5">Cette aventure ne serait pas possible sans le soutien de nos partenaires. Entreprise ou particulier, chaque soutien compte. </p>
     <!--First row-->
     <div class="row">
-      <!--Grid column-->
-      <div class="col-md-3 mb-4">
-        <!-- Card -->
+
+      <%= link_to 'Soyez 1er partenaire', partenariat_path, class: "btn btn-success btn-raidators text-white p-2 mx-0"%>
+
+      <!--Premier logo-->
+
+      <!--<div class="col-md-3 mb-4">
         <div class="card card-rounded-raidators">
-          <!-- Card content -->
           <div class="card-body my-4 ">
             <%= image_tag("home_page/scootcoot.png", class:"card-img-top", alt:"Card image cap") %>                 
           </div>
         </div>   
-        <!-- Card -->
-      </div>
-      <!--Grid column-->
-      <div class="col-md-3 mb-4">
-        <!-- Card -->
+      </div> -->
+
+      <!--Second logo-->
+      <!--<div class="col-md-3 mb-4">
         <div class="card card-rounded-raidators">          
-          <!-- Card content -->
           <div class="card-body my-4">
             <%= image_tag("home_page/euronext.png", class:"card-img-top", alt:"Card image cap") %>                             
           </div>
         </div>
-        <!-- Card -->
-      </div>
-      <!--Grid column-->
+      </div>-->     
       
-      <!--Grid column-->
-      <div class="col-md-3 mb-4">
-        <!-- Card -->
+      <!--Third logo-->
+      <!--<div class="col-md-3 mb-4">
         <div class="card card-rounded-raidators">         
-          <!-- Card content -->
           <div class="card-body my-4">
             <%= image_tag("home_page/ansys.png", class:"card-img-top", alt:"Card image cap") %>                 
           </div>
         </div>
-        <!-- Card -->
-      </div>
-      <!--Grid column-->
-      <div class="col-md-3 mb-4">
-        <!-- Card -->
+      </div>-->
+
+      <!--Fourth logo-->
+      <!--<div class="col-md-3 mb-4">
+        
         <div class="card card-rounded-raidators">          
-          <!-- Card content -->
           <div class="card-body my-4">
             <%= image_tag("home_page/thoughtworks.png", class:"card-img-top", alt:"Card image cap") %>                           
           </div>
         </div>
-        <!-- Card -->
-      </div>
-      <!--Grid column-->
+    
+      </div>-->
+
     </div>
     <!--First row-->
   </div>
