--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -315,6 +315,67 @@
   </div>
 </section>
 
+<section class="light-background-raidators">
+  <div class="container"> 
+    <!-- Section heading -->
+    <h3 class="black-text mb-4 pb-2">Les créateurs du site</h3>
+    <hr class="w-header">
+    <!-- Section description -->
+    <p class="lead text-muted mx-auto mt-4 pt-2 mb-5">Ce site internet a été créé et designé par:</p>
+    <!--First row-->
+    <div class="row">
+
+      <div class="col-lg-4 col-md-12 mb-4">   
+        <div class="w-400 mx-auto mb-4">
+          <%= image_tag("home_page/emilie.png", class:" rounded-circle img-fluid-THP mx-auto", alt:"Card image cap") %>
+        </div>
+        <h3 class="title-THP-team">Emilie</h3>
+        <%= link_to "Linkedin Emilie", "https://www.linkedin.com/in/emilie-aussage/", class: "btn btn-info btn-contact text-white lkdn-position", target:"_blank"%>
+
+      </div>
+      <!-- Grid column -->      
+      <div class="col-lg-4 col-md-12 mb-4">
+        <div class="w-200 mx-auto mb-4">
+          <%= image_tag("home_page/emma.png", class:"rounded-circle img-fluid-THP mx-auto", alt:"Card image cap") %>
+        </div>
+        <h3 class="title-THP-ce">Emma Le Goff</h3>
+        <%= link_to "Linkedin Emma", "https://www.linkedin.com/in/emmalegoff/", class: "btn btn-info btn-contact text-white lkdn-position", target:"_blank"%>
+      </div>
+      <!-- Grid column -->    
+      <div class="col-lg-4 col-md-12 mb-4">
+        <div class="w-200 mx-auto mb-4">
+          <%= image_tag("home_page/louison.png", class:" rounded-circle img-fluid-THP mx-auto", alt:"Card image cap") %>
+        </div>
+        <h3 class="title-THP-team">Louison</h3>
+        <%= link_to "Linkedin Louison", "https://www.linkedin.com/in/louison-boisselier-188983a4/", class: "btn btn-info btn-contact text-white lkdn-position-1", target:"_blank"%>
+
+      </div>
+
+      <div class="col-lg-4 col-md-12 mb-4">
+        <div class="w-200 mx-auto mb-4">
+          <%= image_tag("home_page/lola.png", class:" rounded-circle img-fluid-THP mx-auto", alt:"Card image cap") %>
+        </div>
+        <h3 class="title-THP-team">Lola</h3>
+      </div>
+
+
+      <div class="col-lg-4 col-md-12 mb-4">
+        <div class="w-200 mx-auto mb-4">
+          <%= image_tag("home_page/charlotte.png", class:" rounded-circle img-fluid-THP mx-auto", alt:"Card image cap") %>
+        </div>
+        <h3 class="title-THP-ce">Charlotte</h3>
+        <%= link_to "Linkedin Charlotte", "https://www.linkedin.com/in/charlottefavier/", class: "btn btn-info btn-contact text-white lkdn-position", target:"_blank"%>
+
+      </div>
+
+
+
+
+    </div>
+    <!--First row-->
+  </div>
+</section>
+
   
 
 
