--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -57,7 +57,7 @@
       <!-- Grid column -->
     </div>
     <!-- Grid row -->
-    <div class="target:"_blank"> <%= link_to "Nous suivre", "https://www.facebook.com/lesraidators/", class: "btn btn-success btn-raidators text-white p-10 mx-5", target:"_blank"%></div>
+    <div class="target:_blank"> <%= link_to "Nous suivre", "https://www.facebook.com/lesraidators/", class: "btn btn-success btn-raidators text-white p-10 mx-5", target:"_blank"%></div>
   </section>
   <!--Section: Content-->
 </div>      
