correct mail sender

--- a/app/views/order_mailer/new_order_email.html.erb
+++ b/app/views/order_mailer/new_order_email.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>Vous avez un nouveau don </p>
-    <p>Rendez profil pour le consulter</p>
+    <p>Rendez vous sur votre profil pour le consulter</p>
 
   </body>
 </html>
