--- a/app/views/order_mailer/order_email.html.erb
+++ b/app/views/order_mailer/order_email.html.erb
@@ -6,7 +6,8 @@
   <body>
     
     <h1> Merci pour ton don, le dieu des Raidators te le rendra </h1>
-    <p> PS: Si tu as besoin d'une facture, n'hésite pas à nous contacter à raidator@yopmail.com </p>
+    <p> PS: Si tu as besoin d'une facture ou nous envoyer du love, n'hésite pas à nous contacter à l'adresse mail suivante raidator@outlook.fr
+     </p>
     </div>
   </body>
 </html>
