add newest collect point

--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -43,7 +43,16 @@
           <br>
           - Day by Day, 29 Rue de la Roë<br>
           - Le Garage, 23 Boulevard du Maréchal Foch  <br>
-          - L'épicerie 2 Pauline, 22 Rue Saint-Julien
+          - L'épicerie 2 Pauline, 22 Rue Saint-Julien  <br>
+
+          <br><strong>Nantes:</strong><br>
+          <br>
+          - Day by Day, 3 Rue Pierre Chéreau <br>
+
+          <br><strong>Saint Nazaire:</strong><br>
+          <br>
+          - Vero moda, 6 Rue François Marceau<br>
+         
           
           </p>
         </div>
