add new adresses, erase map. Add to pay. fuck it

--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -51,19 +51,13 @@
 
           <br><strong>Saint Nazaire:</strong><br>
           <br>
-          - Vero moda, 6 Rue François Marceau<br>
+          - New life, 6 Rue François Marceau<br>
+          - Belles et Rebelles, 53 Rue Baptiste Marcet<br>
          
           
           </p>
         </div>
-        <!-- Grid column -->
-        <div class="col-lg-5 ">
-          <!-- Featured image -->
-            <!-- Google Maps -->
-              <iframe src="https://www.atlistmaps.com/map/44dddbcf-2c83-4c69-b563-cd35276cfbce?share=true" allow="geolocation"  frameborder="0" scrolling="no" allowfullscreen class="map-sizing"></iframe>              
-            <!-- Google Maps --> 
-        </div>
-        <!-- Grid column -->
+       
       </div>
       <!-- Grid row -->
       <hr class="my-5">     
