modify picture sponsors

--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -275,7 +275,7 @@
       <div class="col-md-3 mb-4">
         <div class="card card-rounded-raidators">
           <div class="card-body my-4 ">
-            <%= image_tag("sponsors/CIDEXPORT.png", class:"card-img-top", alt:"Card image cap") %>                 
+            <%= image_tag("sponsors/CIDEXPORT.jpg", class:"card-img-top", alt:"Card image cap") %>                 
           </div>
 
         </div>   
