add 2nd partnership and modify file of partnership

--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -283,14 +283,16 @@
       </div> 
 
       <!--Second logo-->
-      <!--<div class="col-md-3 mb-4">
+      <div class="col-md-3 mb-4">
         <div class="card card-rounded-raidators">          
           <div class="card-body my-4">
-            <%= image_tag("home_page/euronext.png", class:"card-img-top", alt:"Card image cap") %>                             
+            <%= image_tag("sponsors/SIGNORIZZA.jpg", class:"card-img-top", alt:"Card image cap") %>                             
           </div>
         </div>
-      </div>-->     
-      
+        <%= link_to "Signorizza", "https://www.signorizza.com/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-0" %> 
+
+      </div>
+
       <!--Third logo-->
       <!--<div class="col-md-3 mb-4">
         <div class="card card-rounded-raidators">         
