add last sponsors

--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -279,7 +279,7 @@
           </div>
 
         </div>   
-        <%= link_to "Cidexport", "https://www.cidexport.net/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-0" %> 
+        <%= link_to "Cidexport", "https://www.cidexport.net/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-3" %> 
       </div> 
 
       <!--Second logo-->
@@ -289,29 +289,48 @@
             <%= image_tag("sponsors/SIGNORIZZA.jpg", class:"card-img-top", alt:"Card image cap") %>                             
           </div>
         </div>
-        <%= link_to "Signorizza", "https://www.signorizza.com/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-0" %> 
+        <%= link_to "Signorizza", "https://www.signorizza.com/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-3" %> 
 
       </div>
 
       <!--Third logo-->
-      <!--<div class="col-md-3 mb-4">
+      <div class="col-md-3 mb-4">
         <div class="card card-rounded-raidators">         
           <div class="card-body my-4">
-            <%= image_tag("home_page/ansys.png", class:"card-img-top", alt:"Card image cap") %>                 
+            <%= image_tag("sponsors/CHOCODIC.png", class:"card-img-top", alt:"Card image cap") %>                 
           </div>
         </div>
-      </div>-->
+        <%= link_to "Chocodic", "https://www.chocodic.com/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-3" %> 
+
+      </div>
+
 
       <!--Fourth logo-->
-      <!--<div class="col-md-3 mb-4">
+      <div class="col-md-3 mb-4">
         
         <div class="card card-rounded-raidators">          
           <div class="card-body my-4">
-            <%= image_tag("home_page/thoughtworks.png", class:"card-img-top", alt:"Card image cap") %>                           
+            <%= image_tag("sponsors/REGALADE.svg", class:"card-img-top", alt:"Card image cap") %>                           
           </div>
         </div>
+        <%= link_to "Regalade", "https://www.la-regalade.com/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-3" %> 
+
     
-      </div>-->
+      </div>
+
+      <!--Fifth logo-->
+      <div class="col-md-3 mb-4">
+        
+        <div class="card card-rounded-raidators">          
+          <div class="card-body my-4">
+            <%= image_tag("sponsors/BLANVILLAIN.png", class:"card-img-top", alt:"Card image cap") %>                           
+          </div>
+        </div>
+
+        <%= link_to "Blanvillain", "http://www.blanvillain-opticiens.fr/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-3" %> 
+
+    
+      </div>
 
     </div>
     <!--First row-->
