add last sponsors

--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -332,6 +332,47 @@
     
       </div>
 
+      <!--sixth logo-->
+      <div class="col-md-3 mb-4">
+        
+        <div class="card card-rounded-raidators">          
+          <div class="card-body my-4">
+            <%= image_tag("sponsors/LOIRE_HABITAT.png", class:"card-img-top", alt:"Card image cap") %>                           
+          </div>
+        </div>
+
+        <%= link_to "Loire Habitat", "http://www.slh-habitat.fr/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-3" %> 
+
+    
+      </div>
+
+      <!--seventh logo-->
+      <div class="col-md-3 mb-4">
+        
+        <div class="card card-rounded-raidators">          
+          <div class="card-body my-4">
+            <%= image_tag("sponsors/DHDG.png", class:"card-img-top", alt:"Card image cap") %>                           
+          </div>
+        </div>
+
+        <%= link_to "des Halles et des Gourmets", "https://www.deshallesetdesgourmets.fr/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-3" %> 
+
+    
+      </div>
+
+      <!--heigth logo-->
+      <div class="col-md-3 mb-4">
+        
+        <div class="card card-rounded-raidators">          
+          <div class="card-body my-4">
+            <%= image_tag("sponsors/TROTTIDOC.png", class:"card-img-top", alt:"Card image cap") %>                           
+          </div>
+        </div>
+
+        <%= link_to "Trottidoc", "https://trottidoc.fr/", class:"cidexport-btn btn btn-info btn-raidators text-white p-2 mx-3" %> 
+
+      </div>
+
     </div>
     <!--First row-->
       <%= link_to 'Devenir sponsors', partenariat_path, class: "partner-proposition btn btn-success btn-raidators text-white p-2 mx-0"%>
